--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 	<packaging>war</packaging>
 	<version>0.0.7-SNAPSHOT</version>
 	<name>my-app</name>
+	<!-- demo in github -->
 	<url>http://maven.apache.org</url>
 
 	<dependencies>
