--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 	<name>my-app</name>
 	<!-- demo in github -->
 	<!-- demo in github -->
+	<!-- demo in github -->
 	<url>http://maven.apache.org</url>
 
 	<dependencies>
