--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 	<!-- demo in github -->
 	<!-- demo in github -->
 	<!-- demo in github -->
+	<!-- demo in github -->
 	<url>http://maven.apache.org</url>
 
 	<dependencies>
